# Bn-Agentic-Meta

./: .gitignore  Acidaes.Agentic.MetaData.sln
Acidaes.MetaData.Rag/: Acidaes.MetaData.Rag.csproj  (+4 more)
Acidaes_python_agent/: .gitignore  main.py  pyproject.toml  stress_test_llm.py  test_llm.py
Acidaes_python_agent/.github/: copilot-instructions.md
Acidaes_python_agent/memory_db/db/: custom_fields_syn.json  fields.json  invertedIndex.json  layouts.json  objects.json  roles.json
Acidaes_python_agent/memory_db/orignal/: ---fields.json  fields.json  layouts.json  model.json  objects.json  roles.json  system_field_4.json
Acidaes_python_agent/src/LLM_Implementaion/: Instructions_README.md  __init__.py
Acidaes_python_agent/src/LLM_Implementaion/Pipeline_1/: __init__.py
Acidaes_python_agent/src/LLM_Implementaion/Pipeline_1/Instructions/: intentInstructions.txt
Acidaes_python_agent/src/LLM_Implementaion/Pipeline_1/Schema/: intentSchema.json
Acidaes_python_agent/src/LLM_Implementaion/Pipeline_2/: __init__.py
Acidaes_python_agent/src/interfaces/: response_model.py
Acidaes_python_agent/src/utility/: call_llm.py  context_normalization.py  entity_normalization.py  file_loader.py  load_meta_data_files.py  meta_data.py  public_util.py  query_normalization.py
Acidaes_python_agent/src/utility/nlp_dict/: field_stop_words.py  object_synonyms.py  stop_words.py
Acidaes_python_agent/src/utility_v2/: __init__.py  enhanced_context_api.py  enhanced_entity_generator.py  enhanced_entity_manager.py  filtering_comprehensive.py  filtering_selective.py  inverted_index.json
(+425 files in other folders)
